<resources>
    <string name="app_name">App1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">Todo</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="type_your_password">Type your password</string>
    <string name="signup">Sign Up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="signin">Sign In</string>
    <string name="add_task">Add your task</string>
</resources>